GEODE-5530: Cleanup geode-dunit